--- a/LAB1.Rmd
+++ b/LAB1.Rmd
@@ -19,7 +19,7 @@ In this lab we will have an opportunity to do some simple population modeling us
 
 ## Nomenclature for Population Ecology
 
-First of all, we need a symbol to represent the population size. This is $N$!
+First of all, we need a symbol to represent population size. This is $N$!
 
 $\Delta N$ represents the change in population size, ${N_{t+1}}-{N_t}$
 
