--- a/Links.Rmd
+++ b/Links.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Links"
 author: "NRES 470"
-date: "April 23, 2018"
+date: "Spring 2022"
 output: 
   html_document: 
     theme: spacelab
@@ -19,8 +19,11 @@ Please let me know if there are other links that you think should be included on
 
 - [InsightMaker- free web-based systems modeling tool](https://insightmaker.com/)    
 - [R- free statistical programming language](https://cran.r-project.org/)
-- [Program MARK](http://warnercnr.colostate.edu/~gwhite/mark/mark.htm)
 
-[Weekly math/bio "Stats chats"](https://kevintshoemaker.github.io/StatsChats/)
+
+## Learning R
+
+- [UNR R 'bootcamp'](https://kevintshoemaker.github.io/R-Bootcamp/)
+- [Swirl: interactive system for learning R in R](https://swirlstats.com/students.html)
 
 
